# excel-processor

./: .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  contributing.md
docs/examples/: complex_forumlae.md  cross_sheet_references.md
excel_processor/: __init__.py  cli.py
excel_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
excel_processor/config/: __init__.py  schema.py  validator.py
excel_processor/core/: __init__.py  engine.py  excel_reader.py  formula_converter.py
excel_processor/models/: __init__.py  dependency_graph.py  formula.py  worksheet.py
excel_processor/processors/: __init__.py  base.py  data_processor.py  formula_processor.py
excel_processor/utils/: __init__.py  excel_utils.py  formula_parser.py  validation_utils.py
excel_processor/validators/: base_validator.py  excel_validator.py
requirements/: base.txt  dev.txt  test.txt
tests/: conftest.py
tests/fixtures/: How-to-Apply-a-Formula-to-Multiple-Sheets-in-Excel.xlsx  __init__.py
tests/fixtures/config_files/: test_config.yaml
tests/integration/: test_end_to_end.py  test_excel_processing.py
tests/unit/test_config/: test_schema.py  test_validator.py
tests/unit/test_core/: test_engine.py  test_excel_reader.py  test_formula_converter.py
tests/unit/test_models/: test_dependency_graph.py  test_formula.py  test_worksheet.py
(+6 files in other folders)
